# json5-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  jogfile  out  todo
benches/: bench.rs  benchmark.rs  de.rs  json.rs  ser.rs  setup.sh
benches/data/: README.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: strings.rs
src/: char.rs  de.rs  error.rs  json5.pest  lib.rs  main.rs  ser.rs  unicode.rs
tests/: adapted_from_js_reference.rs  chromium_example.json5  common.rs  de.rs  examples.rs  json5_dot_org_example.rs  ser.rs  tests.rs
tests/assets/: infinite.json5  nan.json5
