[package]
name = "json5"
version = "1.0.0"
authors = ["Callum Oakley <hello@callumoakley.net>"]
description = "A Rust JSON5 serializer and deserializer which speaks Serde."
license = "MIT"
repository = "https://github.com/callum-oakley/json5-rs"
readme = "README.md"
keywords = ["json5", "parse", "parser", "serde", "json"]
edition = "2024"

[dependencies]
serde = "1"

[dev-dependencies]
serde_derive = "1"
