[package]
name = "json5"
version = "1.0.0"
authors = ["Callum Oakley <hello@callumoakley.net>"]
description = "A Rust JSON5 serializer and deserializer which speaks Serde."
license = "MIT"
repository = "https://github.com/callum-oakley/json5-rs"
readme = "README.md"
keywords = ["json5", "parse", "parser", "serde", "json", "jsonc"]
edition = "2024"

[dependencies]
serde = "1"
ucd-trie = "0.1.7"

[dev-dependencies]
indexmap = { version = "2.12.1", features = ["serde"] }
serde_bytes = "0.11.19"
serde_derive = "1"
serde_json = "1.0.145"
